name:                deterministic-game-engine
version:             0.1.0.0
synopsis:            Simple deterministic game engine
description:         Game engine for creating deterministic games.
license:             MIT
license-file:        LICENSE
author:              Tyler Olson
maintainer:          tydotg@gmail.com
homepage:            https://github.com/TGOlson/deterministic-game-engine
bug-reports:         https://github.com/TGOlson/deterministic-game-engine/issues
category:            Game Engine
build-type:          Simple
cabal-version:       >=1.10


Source-repository head
    Type:     git
    Location: https://github.com/TGOlson/deterministic-game-engine


library
  hs-source-dirs:      Src
  exposed-modules:     GameEngine
  other-modules:       GameActions,
                       GameState,
                       Move,
                       Player

  build-depends:       base >=4.0 && <5.0
  default-language:    Haskell2010

test-suite test
  hs-source-dirs:      Spec
  main-is:             Spec.hs
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.0 && <5.0,
                       hspec >=2.1 && <2.2,
                       deterministic-game-engine

  default-language:    Haskell2010
